--- a/.github/workflows/test_scripts.yml
+++ b/.github/workflows/test_scripts.yml
@@ -19,6 +19,7 @@ jobs:
       - name: Lint shell scripts
         uses: super-linter/super-linter@v6.1.1
         env: 
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           VALIDATE_SHELL_SHFMT: true 
           BASH_SEVERITY: info
         
